// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snaphot must match btn 1`] = `
<div>
  <button
    className="btn"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<Button /> Snaphot must match btnPrimary 1`] = `
<div
  className="p-4 d-flex flex-justify-between"
>
  <button
    className="btn btn-primary"
    type="button"
  >
    Button
  </button>
  <button
    className="btn btn-primary hover"
    type="button"
  >
    hover
  </button>
  <button
    className="btn btn-primary focus"
    type="button"
  >
    focus
  </button>
  <button
    className="btn btn-primary selected"
    type="button"
  >
    selected
  </button>
  <button
    className="btn btn-primary disabled"
    type="button"
  >
    disabled
  </button>
</div>
`;

exports[`<Button /> Snaphot must match link 1`] = `
<div>
  <a
    className="btn"
    href="#url"
    role="button"
  >
    Button
  </a>
</div>
`;
